# panel-live-server

./: .copier-answers.yml  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  pixi.toml  pyproject.toml  validation.md  zensical.toml
.github/workflows/: build.yml  ci.yml  docs.yml
docs/: examples.md  index.md
docs/examples/: github-copilot.md
docs/explanation/: architecture.md
docs/how-to/: configure-server.md
docs/reference/: panel_live_server.md
docs/tutorials/: getting-started.md  installation.md  mcp-server.md  standalone-server.md
project/: closed-issues.md  open-issues.md
research/: panel-viz-mcp.md
src/panel_live_server/: __init__.py  app.py  cli.py  client.py  config.py  database.py  endpoints.py  main.py  manager.py  server.py  utils.py  validation.py
src/panel_live_server/pages/: __init__.py  add_page.py  admin_page.py  feed_page.py  view_page.py
src/panel_live_server/templates/: show.html  show_pyodide.html
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_core.py  test_database.py  test_endpoints.py  test_integration.py  test_manager.py  test_server.py  test_utils.py  test_validation.py  test_view_page.py
