[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "panel>=1.5.0",
    "packaging",
]
build-backend = "hatchling.build"


[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "panel-live-server"
dynamic = ["version"]
description = "Panel Live Server is a local Panel web server that executes Python code snippets and renders the resulting visualizations as live, interactive web pages."
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.12"
authors = [{ name = "MarcSkovMadsen", email = "marc.skov.madsen@gmail.com" }]
maintainers = [
    { name = "MarcSkovMadsen", email = "marc.skov.madsen@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "packaging",
    "panel >=1.5.0",
    "panel-material-ui",
    "psutil",
    "requests",
    "pydantic >=2.0",
    "fastmcp >=3.0",
    "typer",
]

[project.scripts]
pls = "panel_live_server.cli:main"
panel-live-server = "panel_live_server.cli:main"

[project.urls]
Homepage = "https://github.com/panel-extensions/panel-live-server"
Source = "https://github.com/panel-extensions/panel-live-server"

[project.optional-dependencies]
dev = [
    "zensical",
    "mkdocstrings[python]",
    "pre-commit",
    "pytest-asyncio",
    "pytest-rerunfailures",
    "pytest-xdist",
    "pytest",
    "typer",
    "watchfiles",
]
mypy = [
    "mypy",
    "types-requests",
    "typing-extensions",
    "panel>=1.5.0",
]
pydata = [
    "altair",
    "datashader",
    "duckdb",
    "holoviews",
    "hvplot",
    "hvsampledata",
    "ipywidgets_bokeh",
    "matplotlib",
    "panel-full-calendar",
    "panel-graphic-walker",
    "panel-neuroglancer",
    "panel-precision-slider",
    "panel-splitjs",
    "panel-web-llm",
    "plotly",
    "polars",
    "pyarrow",
    "scikit-learn",
    "seaborn",
    "setuptools", # Due to https://github.com/bokeh/ipywidgets_bokeh/issues/125
    "shapely",
    "vega_datasets",
    "yfinance",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".eggs",
    "*.egg",
    "doc",
    "dist",
    "build",
    "_build",
    "examples",
    ".ipynb_checkpoints",
    "node_modules",
]
line-length = 165
fix = true

[tool.ruff.lint]
ignore = [
    "D203", # one-blank-line-before-class and `no-blank-line-before-class` (D211) are incompatible.
    "D212", # multi-line-summary-first-line. Alternative is to ignore D213 `multi-line-summary-second-line
    "E402",  # Module level import not at top of file
    "E712",  # Avoid equality comparisons to True
    "E731",  # Do not assign a lambda expression, use a def
    "N803",  # Argument name should be lowercase
    "N806",  # Variable name should be lowercase
]
select = [
    "B",    # flake8-bugbear
    "D",    # pydocstyle
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "PIE",
    "T20",
    "RUF006",
    "UP004",
    "UP006",
    "UP020",
    "UP028",
    "UP030",
    "UP031",
    "UP032",
    "UP034",
    "UP036",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
addopts = "--pyargs --doctest-ignore-import-errors --color=yes"
norecursedirs = "doc .git dist build _build .ipynb_checkpoints examples"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
xfail_strict = true
minversion = "7"
log_cli_level = "INFO"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
testpaths = ["tests"]

[tool.mypy]
python_version = '3.12'
no_implicit_optional = true
check_untyped_defs = true

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }
